welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: not found: value y
    cpt=deuxl(y,cpt)
              ^